# assume-rolers

./: CHANGELOG.md  Cargo.toml  README.md  justfile
assets/: assume-rolers-export.wasm
assume-rolers-schema/: Cargo.toml
assume-rolers-schema/src/: credentials.rs  lib.rs  plugin.rs  shell.rs
plugins/: Cargo.toml
plugins/assume-rolers-export/: Cargo.toml
plugins/assume-rolers-export/src/: main.rs
scripts/: update-changelog.bash  update-plugins.bash
shell-completions/: assume-rolers.fish
src/: app.rs  assume_role.rs  command.rs  credentials.rs  handler.rs  lib.rs  main.rs  mfa.rs  profile.rs  run.rs
src/assume_role/: aws_sdk.rs  rusoto.rs
src/command/: federation.rs  shell.rs  wasm.rs
src/handler/: federation.rs  shell.rs  wasm.rs
src/profile/: load.rs  select.rs
src/profile/load/: aws_sdk.rs
src/profile/select/: skim.rs
