[package]
name = "assume-rolers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = "0.51"
aws-types = "0.51"
chrono = "0.4"
clap = "4.0"
nix = "0.25"
rusoto_config = "0.48"
rusoto_core = "0.48"
rusoto_sts = "0.48"
skim = "0.10"
tokio = { version = "1.21", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
