[package]
name = "assume-rolers"
version = "0.2.1"
edition = "2021"
authors = ["yoshihitoh <yoshihito.arih@gmail.com>"]
categories = ["command-line-utilities"]
keywords = ["aws", "assume_role"]
description = "A command line tool to use a temporary AWS credentials."
homepage = "https://github.com/yoshihitoh/assume-rolers"
repository = "https://github.com/yoshihitoh/assume-rolers"
readme = "README.md"
license = "MIT"

[[bin]]
name = "assume-rolers"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-config = "0.51"
aws-types = "0.51"
chrono = "0.4"
clap = { version = "4.0", features = ["derive", "string"] }
clap_complete = "4.0"
nix = "0.25"
rusoto_config = "0.48"
rusoto_core = "0.48"
rusoto_sts = "0.48"
skim = "0.10"
tokio = { version = "1.21", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
