[package]
name = "assume-rolers"
version.workspace = true
authors.workspace = true
edition.workspace = true

categories = ["command-line-utilities"]
keywords = ["aws", "assume_role"]
description = "A command line tool to use a temporary AWS credentials."
homepage = "https://github.com/yoshihitoh/assume-rolers"
repository = "https://github.com/yoshihitoh/assume-rolers"
readme = "README.md"
license = "MIT"
default-run = "assume-rolers"

[[bin]]
name = "assume-rolers"
path = "src/bin/main.rs"

[workspace]
members = [
    "assume-rolers-schema",
]

exclude = [
    "plugins/",
]

[workspace.package]
version = "0.3.0"
authors = ["yoshihitoh <yoshihito.arih@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-config = "1.5.6"
aws-types = "1.3.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "string"] }
clap_complete = "4.0"
nix = "0.25"
reqwest = "0.11"
rusoto_config = "0.48"
rusoto_core = "0.48"
rusoto_sts = "0.48"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skim = "0.10"
tokio = { version = "1.21", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasi-common = "3.0"
wasmtime = "3.0"
wasmtime-wasi = "3.0"

assume-rolers-schema = { version = "0.3.0", path = "assume-rolers-schema" }
aws-runtime = "1.4.3"
